--- a/public/portfolio-ui-apollion_pt-br.html
+++ b/public/portfolio-ui-apollion_pt-br.html
@@ -84,7 +84,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <h1 class="title">
-                                    Design System & Design Ops
+                                    Apollion DS & Ops
                                 </h1>
                                 <div class="description">
                                     <p>De 2020 até janeiro de 2022 trabalhei exclusivamente para a Captalys e com algumas atuações paralelas com aulas - para a Prodevs ou com conteúdo para o meu canal no Youtube.</p>
@@ -144,6 +144,7 @@
                         <p>No começo, lá no primeiro trimestre de 2020, muito do trabalho foi entender os requisitos e para onde iríamos seguir com os trabalhos para a escala de Design de Interfaces. Havia a necessidade de um Design System e também de padrões para uma plataforma modular para a criação de produtos “White Label”.</p>
                         <p>Com esse entendimento inicial realizado conseguimos projetar toda a linguagem visual do Design System para o desenvolvimento posterior dos Design Tokens, bem como estruturamos as premissas para a evolução do mesmo.</p>
                         <p>O Design System, chamado Apollion, evoluiu então de forma orgânica para atender as necessidades de negócio, dividindo sua evolução entre entendimento de Design e entregas para o time de Engenharia.</p>
+                        <p>Nesta primeira fase o time era composto por dois Designers (eu e um UI Designer Junior)</p>
                         <ul>
                             <li>Desenhamos as estruturas iniciais de linguagem de design e os primeiros Design Tokens, definindo regras de composição para cores, espaçamento, tipografia, sombras e todos os elementos relacionados;</li>
                             <li>Determinamos as regras e processos iniciais para um Design System Multi-marcas e White Label;</li>
@@ -166,7 +167,10 @@
                     <div class="page-content__body__about">
                         <h2 class="title">Fase 2: Entregas versão estável e definições gerais de Design</h2>
                         <h4><strong>Quando?</strong>  Segundo semestre de 2020 até o Junho de 2021</h4>
-                        <p>Até Agosto de 2021 ele foi feito assim. A partir dessa data, iniciamos um processo de reestruturação dos Design Tokens e da camada de consumo dos mesmos pelo time de Engenharia, com o objetivo de criar uma camada de temificação em formato de API (chamamos de DS Theme API) para que pudéssemos aumentar a capacidade de criação de layouts e atender necessidades de mercado - os clientes da empresa precisavam de mais opções de personalização.</p>
+                        <p>O Apollion seguiu sendo feito de forma orgânica em seu segundo ciclo: porém, iniciamos um projeto mais focado nas entregas de componentes com uma arquitetura mais organizada pensando em componentes complexos gerando propriedades espelhada na camada de Engenharia: chamamos esse conceito posteriormente de Component API.</p>
+                        <p>Ele permitiu que conseguíssemos criar uma versão estável do Apollion para ser usada nas telas desenvolvidas pelo time de Design e que pudesse ser usada com equivalência muito parecida na camada de Engenharia.</p>
+                        <p>Porém, faltava a dedicação de um time de Desenvolvimento para aproximarmos as duas camadas do Apollion.</p>
+                        <p>Nesta primeira fase o time era composto por três Designers (eu, um UI Designer Pleno e um UI Designer Junior).</p>
                     </div>
                 </div>
             </section>
@@ -175,11 +179,13 @@
                     <div class="page-content__body__about">
                         <h2 class="title">Fase 3: Restruturação e alinhamento final entre Design e Engenharia</h2>
                         <h4><strong>Quando?</strong>  Segundo semestre de 2021</h4>
-                        <p>Esse fase do projeto teve início com a criação de uma camada de consumo de Design Tokens mais robusta utilizando o Style Dictionary, mas gerou um impacto no time de Design System Ops apra que fizéssemos os componentes para atender essa reestruturação.</p>
+                        <p>Até Agosto de 2021, quando iniciamos um processo de reestruturação dos Design Tokens e da camada de consumo dos mesmos pelo time de Engenharia, com o objetivo de criar uma camada de temificação em formato de API (chamamos de DS Theme API) para que pudéssemos aumentar a capacidade de criação de layouts e atender necessidades de mercado - os clientes da empresa precisavam de mais opções de personalização.
+                        </p>
+                        <p>Essa fase do projeto teve início com a criação de uma camada de consumo de Design Tokens mais robusta utilizando o Style Dictionary, mas gerou um impacto no time de Design System Ops apra que fizéssemos os componentes para atender essa reestruturação.</p>
                         <p>Também passamos a definir mais claramente o que eram estruturas de componentes e sua anatomia com propriedades mais claras (Component API) e representadas dentro das bibliotecas de Design (dentro do Figma) para melhoria dos handoffs.</p>
                         <p>Em paralelo a essas alterações iniciamos também um trabalho de mapeamento de conteúdo, com o intuito de permitir que os clientes também pudessem personalizar texto para atender suas modulações de voz no discurso de cada marca - esse trabalho se iniciou no Apollion mas acabou se estendendo a plataforma, onde criou uma estrutura de arquivos JSON muito similares aos Design Tokens, mas que poderiam ser associadas a coleções de dados alimentadas por uma API de um Headless CMS.</p>
-                        <p>O importante nesse trabalho de conteúdo foi a orquestração e organização do conteúdo com uma visão de Arquitetura de Informação aliada a estruturas que pudessem alimentar diretamente a plataforma de crédito através de atributos de conteúdo presentes em repositórios e componentes.
-                        </p>
+                        <p>O importante nesse trabalho de conteúdo foi a orquestração e organização do conteúdo com uma visão de Arquitetura de Informação aliada a estruturas que pudessem alimentar diretamente a plataforma de crédito através de atributos de conteúdo presentes em repositórios e componentes.</p>
+                        <p>Nesta primeira fase o time era composto por 7 Designers (eu gerindo o time e restante da estrutura de suporte para plataforma e DS).</p>
                     </div>
                     <div class="page-content__body__image" data-image-replace>
                         <img src="/img/portfolio-ui-ryd-guide.jpg" alt="RYD Agro" class="img-fluid">
