--- a/public/portfolio_pt-br.html
+++ b/public/portfolio_pt-br.html
@@ -124,7 +124,7 @@
                     <li>
                         <a href="portfolio-ui-apollion_pt-br.html">
                             <span>
-                            <strong>UI #1:</strong> Design System & Ops (2020 ~ 2022)
+                            <strong>UI #1:</strong> Apollion DS & Ops (2020 ~ 2022)
                             </span>
                         </a>
                     </li>
