fixing pt text problems

--- a/public/portfolio-ui-apollion_pt-br.html
+++ b/public/portfolio-ui-apollion_pt-br.html
@@ -167,10 +167,10 @@
                     <div class="page-content__body__about">
                         <h2 class="title">Fase 2: Entregas versão estável e definições gerais de Design</h2>
                         <h4><strong>Quando?</strong>  Segundo semestre de 2020 até o Junho de 2021</h4>
-                        <p>O Apollion seguiu sendo feito de forma orgânica em seu segundo ciclo: porém, iniciamos um projeto mais focado nas entregas de componentes com uma arquitetura mais organizada pensando em componentes complexos gerando propriedades espelhada na camada de Engenharia: chamamos esse conceito posteriormente de Component API.</p>
+                        <p>O Apollion seguiu sendo feito dessa forma orgânica também em seu segundo ciclo. Porém, iniciamos um projeto mais focado nas entregas de componentes com uma arquitetura mais organizada pensando em estruturas mais complexas - gerando propriedades espelhadas na camada de Engenharia (chamamos esse conceito posteriormente de Component API).</p>
                         <p>Ele permitiu que conseguíssemos criar uma versão estável do Apollion para ser usada nas telas desenvolvidas pelo time de Design e que pudesse ser usada com equivalência muito parecida na camada de Engenharia.</p>
                         <p>Porém, faltava a dedicação de um time de Desenvolvimento para aproximarmos as duas camadas do Apollion.</p>
-                        <p>Nesta primeira fase o time era composto por três Designers (eu, um UI Designer Pleno e um UI Designer Junior).</p>
+                        <p>Nesta primeira fase o mesmo time que fazia o Apollion também fazia as telas dos produtos que o utilizavam; era composto por três Designers (eu, um UI Designer Pleno e um UI Designer Junior).</p>
                     </div>
                 </div>
             </section>
@@ -185,7 +185,7 @@
                         <p>Também passamos a definir mais claramente o que eram estruturas de componentes e sua anatomia com propriedades mais claras (Component API) e representadas dentro das bibliotecas de Design (dentro do Figma) para melhoria dos handoffs.</p>
                         <p>Em paralelo a essas alterações iniciamos também um trabalho de mapeamento de conteúdo, com o intuito de permitir que os clientes também pudessem personalizar texto para atender suas modulações de voz no discurso de cada marca - esse trabalho se iniciou no Apollion mas acabou se estendendo a plataforma, onde criou uma estrutura de arquivos JSON muito similares aos Design Tokens, mas que poderiam ser associadas a coleções de dados alimentadas por uma API de um Headless CMS.</p>
                         <p>O importante nesse trabalho de conteúdo foi a orquestração e organização do conteúdo com uma visão de Arquitetura de Informação aliada a estruturas que pudessem alimentar diretamente a plataforma de crédito através de atributos de conteúdo presentes em repositórios e componentes.</p>
-                        <p>Nesta primeira fase o time era composto por 7 Designers (eu gerindo o time e restante da estrutura de suporte para plataforma e DS).</p>
+                        <p>Nesta fase o time que fazia o DS já não era o mesmo que realizava todas as entregas de telas e era composto por 7 Designers (eu gerindo o time e restante da estrutura de suporte para plataforma e DS).</p>
                     </div>
                     <div class="page-content__body__image" data-image-replace>
                         <img src="/img/portfolio-ui-ryd-guide.jpg" alt="RYD Agro" class="img-fluid">
@@ -202,6 +202,7 @@
                         <h4><strong>Quando?</strong>  Primeiro trimestre de 2022</h4>
                         <p>Em 2022 iniciamos um trabalho de refatoração de todos os componentes do Apollion e suas bibliotecas específicas de produto. A ideia era permitir que o DS fosse utilizado por várias plataformas, descentralizando os times de Design para permitir maior liberdade e velocidade na produção.</p>
                         <p>Realizamos um trabalho de levantamento de nova estrutura de Design Tokens bem como as bibliotecas que deveriam estar prontas em uma camada de Webcomponents até o final do primeiro semestre de 2022 para que pudéssemos aumentar a produtividade de nossos times - descentralizar a estrutura de consumo para Design e Engenharia.</p>
+                        <p>Nesta fase o time que fazia o DS era complementa diferente do que consumia seus entregáveis e era composto pelos memos 7 Designers (eu gerindo o time e restante da estrutura dividida entre produtos e DS).</p>
                     </div>
                 </div>
             </section>
