fix list layout

--- a/public/portfolio-ui-apollion_pt-br.html
+++ b/public/portfolio-ui-apollion_pt-br.html
@@ -145,13 +145,13 @@
                         <p>Com esse entendimento inicial realizado conseguimos projetar toda a linguagem visual do Design System para o desenvolvimento posterior dos Design Tokens, bem como estruturamos as premissas para a evolução do mesmo.</p>
                         <p>O Design System, chamado Apollion, evoluiu então de forma orgânica para atender as necessidades de negócio, dividindo sua evolução entre entendimento de Design e entregas para o time de Engenharia.</p>
                         <p>Nesta primeira fase o time era composto por dois Designers (eu e um UI Designer Junior)</p>
-                        <ul>
-                            <li>Desenhamos as estruturas iniciais de linguagem de design e os primeiros Design Tokens, definindo regras de composição para cores, espaçamento, tipografia, sombras e todos os elementos relacionados;</li>
-                            <li>Determinamos as regras e processos iniciais para um Design System Multi-marcas e White Label;</li>
-                            <li>Orquestramos a distribuição e divisão dos ativos de Design através de bibliotecas dentro do Figma e como seriam distribuídos para a utilização;</li>
-                            <li>Aplicamos a linguagem gráfica e as primeiras versões dos componentes em Designs que forma implementados nas plataformas de crédito da empresa;</li>
-                            <li>Criação das Premissas de Design para a evolução da área de Design de Interfaces na empresa;</li>
-                            <li>Início da Documentação do Design System no Confluence.</li>
+                        <ul class="list-group">
+                            <li classs="list-group-item">Desenhamos as estruturas iniciais de linguagem de design e os primeiros Design Tokens, definindo regras de composição para cores, espaçamento, tipografia, sombras e todos os elementos relacionados;</li>
+                            <li classs="list-group-item">Determinamos as regras e processos iniciais para um Design System Multi-marcas e White Label;</li>
+                            <li classs="list-group-item">Orquestramos a distribuição e divisão dos ativos de Design através de bibliotecas dentro do Figma e como seriam distribuídos para a utilização;</li>
+                            <li classs="list-group-item">Aplicamos a linguagem gráfica e as primeiras versões dos componentes em Designs que forma implementados nas plataformas de crédito da empresa;</li>
+                            <li classs="list-group-item">Criação das Premissas de Design para a evolução da área de Design de Interfaces na empresa;</li>
+                            <li classs="list-group-item">Início da Documentação do Design System no Confluence.</li>
                         </ul>
                     </div>
                     <div class="page-content__body__image" data-image-replace>
