--- a/public/portfolio-ui-apollion_pt-br.html
+++ b/public/portfolio-ui-apollion_pt-br.html
@@ -115,21 +115,21 @@
                                 <div class="page-content__image">
                                     <img src="/img/icon-ui-out-of.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">UI Guide</h2>
+                                <h2 class="title title--secondary">Arquitetura do Design System</h2>
                                 <p>Como o requisito principal era acelerar o desenvolvimento do aplicativo, escolhemos o Material Design como base - personalizei a interface e apliquei modificações para ficar dentro do guia de utilização da marca.</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
                                     <img src="/img/icon-ui-design.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">Design do App</h2>
+                                <h2 class="title title--secondary">Coordenação de Time e Ops</h2>
                                 <p>O aplicativo ganhou uma direção de arte baseada no UI Guide. Foi trabalhada a jornada dos usuários e os dois grandes grupos de personas: fluxos foram mapeados, o trabalho de UX desenvolvido e um protótipo entregue.</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
                                     <img src="/img/icon-ui-vision.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">Direção de Arte</h2>
+                                <h2 class="title title--secondary">Documentação e Escala</h2>
                                 <p>Não só fizemos a parte online, mas criamos um guia de marca. O logotipo, inclusive, foi trabalhado pensando em aplicação digital e em como iria interagir juntamente com ícones de aplicativos, sites e identidades digitais.</p>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                         <p>Com esse entendimento inicial realizado conseguimos projetar toda a linguagem visual do Design System para o desenvolvimento posterior dos Design Tokens, bem como estruturamos as premissas para a evolução do mesmo.</p>
                         <p>O Design System, chamado Apollion, evoluiu então de forma orgânica para atender as necessidades de negócio, dividindo sua evolução entre entendimento de Design e entregas para o time de Engenharia.</p>
                         <p>Nesta primeira fase o time era composto por dois Designers (eu e um UI Designer Junior)</p>
-                        <ul class="list-group">
+                        <ul class="list-group list-group-flush">
                             <li classs="list-group-item">Desenhamos as estruturas iniciais de linguagem de design e os primeiros Design Tokens, definindo regras de composição para cores, espaçamento, tipografia, sombras e todos os elementos relacionados;</li>
                             <li classs="list-group-item">Determinamos as regras e processos iniciais para um Design System Multi-marcas e White Label;</li>
                             <li classs="list-group-item">Orquestramos a distribuição e divisão dos ativos de Design através de bibliotecas dentro do Figma e como seriam distribuídos para a utilização;</li>
