--- a/public/portfolio-ui-apollion_pt-br.html
+++ b/public/portfolio-ui-apollion_pt-br.html
@@ -113,24 +113,24 @@
                         <div class="row">
                             <div class="col-12 col-md-3 pb-4">
                                 <div class="page-content__image">
-                                    <img src="/img/icon-ui-out-of.svg" alt="Problema" class="img-fluid">
+                                    <img src="/img/icon-ui-design.svg" alt="Problema" class="img-fluid">
                                 </div>
                                 <h2 class="title title--secondary">Arquitetura do Design System</h2>
-                                <p>Como o requisito principal era acelerar o desenvolvimento do aplicativo, escolhemos o Material Design como base - personalizei a interface e apliquei modificações para ficar dentro do guia de utilização da marca.</p>
+                                <p>A minha principal responsabilidade foi fazer a arquitetura de requisitos e processos para que o Apollion atendesse os objetivos do negócio, estudando as formas de organizar e distribuir as bibliotecas para Desenvolvedores e Designers.</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
-                                    <img src="/img/icon-ui-design.svg" alt="Problema" class="img-fluid">
+                                    <img src="/img/icon-ui-out-of.svg" alt="Problema" class="img-fluid">
                                 </div>
                                 <h2 class="title title--secondary">Coordenação de Time e Ops</h2>
-                                <p>O aplicativo ganhou uma direção de arte baseada no UI Guide. Foi trabalhada a jornada dos usuários e os dois grandes grupos de personas: fluxos foram mapeados, o trabalho de UX desenvolvido e um protótipo entregue.</p>
+                                <p>Durante esses dois anos, atuei diretamente com as estruturas organizacionais dos times de Design e Engenharia para atender as demandas ou entregas. Geri as relações cruzadas dos times, o treinamento de profissionais e também o desenvolvimento dos processos</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
                                     <img src="/img/icon-ui-vision.svg" alt="Problema" class="img-fluid">
                                 </div>
                                 <h2 class="title title--secondary">Documentação e Escala</h2>
-                                <p>Não só fizemos a parte online, mas criamos um guia de marca. O logotipo, inclusive, foi trabalhado pensando em aplicação digital e em como iria interagir juntamente com ícones de aplicativos, sites e identidades digitais.</p>
+                                <p>Criei diversos padrões de documentação teórica, prática e de processos para serem usados pelos times em constante crescimento. Essa documentação foi organizada pensando em escala de equipes, evolução dos processos e coloboração contínua entre um time misto.</p>
                             </div>
                         </div>
                     </div>
