nu images on pt html

--- a/public/portfolio-ui-apollion_pt-br.html
+++ b/public/portfolio-ui-apollion_pt-br.html
@@ -104,7 +104,7 @@
                 <section class="page-content__section page-content__section--image">
                     <div class="page-content__body">
                         <div class="page-content__body__image w-100 page-content__body__image--bg" data-image-replace>
-                            <img src="/img/portfolio-ui-ryd.jpg" alt="RYD Agro" class="img-fluid">
+                            <img src="/img/portfolio-ui-apollion-cover.jpg" alt="Apollion" class="img-fluid">
                         </div>
                     </div>
                 </section>
@@ -113,21 +113,21 @@
                         <div class="row">
                             <div class="col-12 col-md-3 pb-4">
                                 <div class="page-content__image">
-                                    <img src="/img/icon-ui-design.svg" alt="Problema" class="img-fluid">
+                                    <img src="/img/icon-ui-design.svg" alt="" class="img-fluid">
                                 </div>
                                 <h2 class="title title--secondary">Arquitetura do Design System</h2>
                                 <p>A minha principal responsabilidade foi fazer a arquitetura de requisitos e processos para que o Apollion atendesse os objetivos do negócio, estudando as formas de organizar e distribuir as bibliotecas para Desenvolvedores e Designers.</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
-                                    <img src="/img/icon-ui-out-of.svg" alt="Problema" class="img-fluid">
+                                    <img src="/img/icon-ui-out-of.svg" alt="" class="img-fluid">
                                 </div>
                                 <h2 class="title title--secondary">Coordenação de Time e Ops</h2>
                                 <p>Durante esses dois anos, atuei diretamente com as estruturas organizacionais dos times de Design e Engenharia para atender as demandas ou entregas. Geri as relações cruzadas dos times, o treinamento de profissionais e também o desenvolvimento dos processos</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
-                                    <img src="/img/icon-ui-vision.svg" alt="Problema" class="img-fluid">
+                                    <img src="/img/icon-ui-vision.svg" alt="" class="img-fluid">
                                 </div>
                                 <h2 class="title title--secondary">Documentação e Escala</h2>
                                 <p>Criei diversos padrões de documentação teórica, prática e de processos para serem usados pelos times em constante crescimento. Essa documentação foi organizada pensando em escala de equipes, evolução dos processos e coloboração contínua entre um time misto.</p>
@@ -155,14 +155,14 @@
                         </ul>
                     </div>
                     <div class="page-content__body__image" data-image-replace>
-                        <img src="/img/portfolio-ui-ryd-guide.jpg" alt="RYD Agro" class="img-fluid">
+                        <img src="/img/portfolio-ui-apollion-box-1.jpg" alt="Apollion" class="img-fluid">
                     </div>
                 </div>
             </section>
             <section class="page-content__section page-content__section--details">
                 <div class="page-content__body">
                     <div class="page-content__body__image" data-image-replace>
-                        <img src="/img/portfolio-ui-ryd-guide.jpg" alt="RYD Agro" class="img-fluid">
+                        <img src="/img/portfolio-ui-apollion-box-2.jpg" alt="Apollion" class="img-fluid">
                     </div>
                     <div class="page-content__body__about">
                         <h2 class="title">Fase 2: Entregas versão estável e definições gerais de Design</h2>
@@ -188,14 +188,14 @@
                         <p>Nesta fase o time que fazia o DS já não era o mesmo que realizava todas as entregas de telas e era composto por 7 Designers (eu gerindo o time e restante da estrutura de suporte para plataforma e DS).</p>
                     </div>
                     <div class="page-content__body__image" data-image-replace>
-                        <img src="/img/portfolio-ui-ryd-guide.jpg" alt="RYD Agro" class="img-fluid">
+                        <img src="/img/portfolio-ui-apollion-box-3.jpg" alt="Apollion" class="img-fluid">
                     </div>
                 </div>
             </section>
             <section class="page-content__section page-content__section--details">
                 <div class="page-content__body">
                     <div class="page-content__body__image" data-image-replace>
-                        <img src="/img/portfolio-ui-ryd-guide.jpg" alt="RYD Agro" class="img-fluid">
+                        <img src="/img/portfolio-ui-apollion-box-4.jpg" alt="Apollion" class="img-fluid">
                     </div>
                     <div class="page-content__body__about">
                         <h2 class="title">Fase 4: Evolução e entrega de uma versão estável multiplataforma</h2>
@@ -210,7 +210,7 @@
             <section class="page-content__section page-content__section--details">
                 <div class="page-content__body">
                     <div class="page-content__body__image w-100 page-content__body__image--bg" data-image-replace>
-                        <img src="/img/portfolio-ui-ryd-branding.jpg" alt="RYD Agro" class="img-fluid">
+                        <img src="/img/portfolio-ui-apollion-footer.jpg" alt="Apollion" class="img-fluid">
                     </div>
                 </div>
             </section>
