--- a/public/portfolio_en.html
+++ b/public/portfolio_en.html
@@ -5,26 +5,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="canonical" href="https://poebellentani.me/">
-    <meta itemprop="name" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta itemprop="name" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta itemprop="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta itemprop="image" content="https://poebellentani.me/img/poebellentani.jpg">
     <!-- Metatags gerais -->
     <meta name="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
-    <title>Poe Bellentani, UX/UI Design &amp; Developer</title>
-    <meta name="keywords" content="UX consultant, UI design, Design, UX consultoria, User Experience, Consultoria, Frontend Developer">
+    <title>Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer</title>
+    <meta name="keywords" content="UX consultant, Design System, Design Ops, UI design, Design, UX consultant, User Experience, Consultoria UX, Consultoria, Frontend Developer">
     <!-- Metatags opcionais -->
-    <meta name="copyright" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta name="copyright" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="revisit-after" content="1 day">
     <meta name="author" content="Poe Bellentani">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@poebellentani">
-    <meta name="twitter:title" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta name="twitter:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="twitter:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta name="twitter:image" content="https://poebellentani.me/img/twitter-image.jpg">
     <meta name="twitter:url" content="https://poebellentani.me/">
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="Poe Bellentani: UX/UI Designer &amp; Frontend Developer">
+    <meta property="og:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta property="og:site_name" content="Poe Bellentani, UX/UI Design &amp; Developer">
     <meta property="og:url" content="https://poebellentani.me/">
     <meta property="og:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
@@ -71,20 +71,88 @@
     <!-- End Google Tag Manager -->
 </head>
 
-<body>
-    <div class="oculos-mask">
-        <img src="/img/poe-color.svg" alt="" class="poe-image">
-        <img src="/img/oculos.svg" alt="" class="poe-oculos">
-        <div class="oculos-lentes">
-            <video id="video" autoplay="autoplay" muted="muted" preload="auto" loop="loop">
-                <source src="/video/04.mp4" type="video/mp4">
-            </video>
-        </div>
-    </div>
+<body class="portfolio">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NP23W7C" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <main class="portfolio__body">
+        <a id="home" href="javascript.void(0)" class="main-anchor" aria-label="Início do Site"></a>
 
-    <!-- build:js js/poebellentani.js -->
-    <script src="/js/main.js"></script>
-    <!-- endbuild -->
+        <ul class="cover-buttons list-unstyled">
+            <li>
+                <a href="#ux" class="cta-cover cta-cover--ux" data-toggle-mod="ux">
+                    <span>UX</span>
+                </a>
+            </li>
+            <li>
+                <a href="#ui" class="cta-cover cta-cover--ui" data-toggle-mod="ui">
+                    <span>UI</span>
+                </a>
+            </li>
+        </ul>
+
+        <div class="page-content page-content--ux">
+            <span class="page-content__header">
+                <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
+                <h2 class="title">
+                    <b>UX</b> Portfolio
+                    <a href="#ui" data-toggle-mod="ui" class="go-to-other">UI</a>
+                </h2>
+            </span>
+            <div class="page-content__list">
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="portfolio-ux-innovatech_pt-br.html">
+                            <span>
+                                <strong>UX #1:</strong> Innovatech
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="page-content page-content--ui">
+            <span class="page-content__header">
+                <a href="#" data-toggle-mod="close" class="page-back"><i class="fas fa-arrow-left"></i></a>
+                <h2 class="title">
+                    <b>UI</b> Portfolio
+                    <a href="#ux" data-toggle-mod="ux" class="go-to-other">UX</a>
+                </h2>
+            </span>
+            <div class="page-content__list">
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="portfolio-ui-apollion_pt-br.html">
+                            <span>
+                            <strong>UI #1:</strong> Apollion DS & Ops (2020 ~ 2022)
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="portfolio-ui-ryd_pt-br.html">
+                            <span>
+                                <strong>UI #2:</strong> RYD Agro (2018)
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <img src="/img/poe-lines-red.svg" alt="Poe Bellentani Red" class="poe poe--red">
+        <img src="/img/poe-lines-blue.svg" alt="Poe Bellentani Blue" class="poe poe--blue">
+        <img src="/img/poe-lines-gray.svg" alt="Poe Bellentani Blue" class="poe poe--lines">
+        <div class="poe poe--color">
+            <div class="oculos-lentes">
+                <video id="video" autoplay="autoplay" muted="muted" preload="auto" loop="loop">
+                    <source src="/video/04.mp4" type="video/mp4">
+                </video>
+                <img src="/img/poe-color.svg" alt="Poe Bellentani Blue">
+            </div>
+        </div>
+    </main>
+
+    <script src="js/poebellentani.js"></script>
 
 </body>
 
