--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta name="author" content="Poe Bellentani">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@bonsaiux">
+    <meta name="twitter:site" content="@poebellentani">
     <meta name="twitter:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="twitter:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta name="twitter:image" content="https://poebellentani.me/img/twitter-image.jpg">
@@ -84,6 +84,7 @@
             <li><small><a href="https://www.linkedin.com/in/bellentani/" target="_blank"><i class="fab fa-linkedin-in"></i> linkedin.com/in/bellentani/</a></small></li>
             <li><small><a href="https://www.figma.com/@bellentani" target="_blank"><i class="fas fa-paint-brush"></i> figma.com/@bellentani</a></small></li>
             <li><small><a href="/portfolio_pt-br.html"><i class="fas fa-code"></i> Portfolio (coded, HTML) - Português</a></small></li> <!-- change HTML -->
+            <li><small><a href="/portfolio_en.html"><i class="fas fa-code"></i> Portfolio (coded, HTML) - English</a></small></li> <!-- change HTML -->
             <!-- <li><small><a href="/portfolio_en.html" target="_blank"><i class="fas fa-code"></i> Portfolio (coded, HTML - English</a></small></li> -->
             <li><small><a href="https://github.com/bellentani" target="_blank"><i class="fab fa-github"></i> Github</a></small></li>
             <li><small><a href="mailto:hello@poebellentani.me"><i class="fas fa-envelope"></i> hello@poebellentani.me</a></small></li>
