--- a/public/portfolio-ui-ryd_en.html
+++ b/public/portfolio-ui-ryd_en.html
@@ -5,26 +5,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="canonical" href="https://poebellentani.me/">
-    <meta itemprop="name" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta itemprop="name" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta itemprop="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta itemprop="image" content="https://poebellentani.me/img/poebellentani.jpg">
     <!-- Metatags gerais -->
     <meta name="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
-    <title>Poe Bellentani, UX/UI Design &amp; Developer</title>
-    <meta name="keywords" content="UX consultant, UI design, Design, UX consultoria, User Experience, Consultoria, Frontend Developer">
+    <title>Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer</title>
+    <meta name="keywords" content="UX consultant, Design System, Design Ops, UI design, Design, UX consultant, User Experience, Consultoria UX, Consultoria, Frontend Developer">
     <!-- Metatags opcionais -->
-    <meta name="copyright" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta name="copyright" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="revisit-after" content="1 day">
     <meta name="author" content="Poe Bellentani">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@poebellentani">
-    <meta name="twitter:title" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta name="twitter:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="twitter:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta name="twitter:image" content="https://poebellentani.me/img/twitter-image.jpg">
     <meta name="twitter:url" content="https://poebellentani.me/">
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="Poe Bellentani: UX/UI Designer &amp; Frontend Developer">
+    <meta property="og:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta property="og:site_name" content="Poe Bellentani, UX/UI Design &amp; Developer">
     <meta property="og:url" content="https://poebellentani.me/">
     <meta property="og:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
@@ -77,71 +77,84 @@
     <!-- End Google Tag Manager (noscript) -->
     <main class="portfolio__body">
         <a id="home" href="javascript.void(0)" class="main-anchor" aria-label="Início do Site"></a>
-        <article class="page-content page-content--ux">
-            <section class="page-content__section">
+        <article class="page-content page-content--ui">
+            <section class="page-content__section page-content__section--first">
                 <div class="page-content__header">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
                                 <h1 class="title">
-                                    Innovatech
+                                    RYD Agro
                                 </h1>
                                 <div class="description">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, atque quaerat facere illo quod repellat natus maiores adipisci, dolores possimus velit praesentium voluptatum illum, recusandae accusamus! Similique tempora culpa dolor!</p>
+                                    <p>RYD is a startup from Belém/PA that operates in auctions of offers to buy agricultural commodities. I did the Art Direction for logo development and then wireframes and navigational flow, delivering a navigable prototype to be implemented by the development team, along with a UI KIT based on Google Material.</p>
                                 </div>
                                 <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
-                                    <a href="portfolio.html#ux" class="title">
+                                    <a href="portfolio_pt-br.html#ui" class="title">
                                         <!-- se vier a hash com #ux ou #ui define o layout do "back" -->
-                                        <i>Portfolio</i> <b>UX</b>
-                                        <span class="go-to-other">UI</span>
+                                        <b>UI</b> <i>Portfolio</i>
+                                        <span class="go-to-other">UX</span>
                                     </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="page-content__body">
+                <section class="page-content__section page-content__section--image">
+                    <div class="page-content__body">
+                        <div class="page-content__body__image w-100 page-content__body__image--bg" data-image-replace>
+                            <img src="/img/portfolio-ui-ryd.jpg" alt="RYD Agro" class="img-fluid">
+                        </div>
+                    </div>
+                </section>
+                <div id="more-about" class="page-content__body">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 col-md-3 pb-4">
                                 <div class="page-content__image">
-                                    <img src="/img/icon-brain.svg" alt="Problema" class="img-fluid">
+                                    <img src="/img/icon-ui-out-of.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">Problema</h2>
-                                <p>A empresa queria desenvolver um modelo de negócio para captação de leads e comprovação de autoridade em sua área de atuação.</p>
+                                <h2 class="title title--secondary">UI Guide</h2>
+                                <p>As the main requirement was to speed up the development of the application, we chose Material Design as a base - I customized the interface and applied modifications to stay within the brand's usage guide.</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
-                                    <img src="/img/icon-transform.svg" alt="Problema" class="img-fluid">
+                                    <img src="/img/icon-ui-design.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">Solução proposta</h2>
-                                <p>A criação de um MVP para validação da ideia e do modelo de negócios - que ainda estava imaturo e precisava de testes para validar sua lucratividade.</p>
+                                <h2 class="title title--secondary">App UI Design</h2>
+                                <p>The app gained an art direction based on the UI Guide. The user journey and the two large groups of personas were worked on: flows were mapped, the UX work was developed and a prototype was delivered.</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
-                                    <img src="/img/icon-think-big.svg" alt="Problema" class="img-fluid">
+                                    <img src="/img/icon-ui-vision.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">Resultado</h2>
-                                <p>Indentificou-se o cenário, mas o produto teve que ser revisto. Aprendeu-se muito com testes e validações com o MVP e o produto voltou para a prancheta.</p>
+                                <h2 class="title title--secondary">Branding</h2>
+                                <p>Not only did we do the online part, we created a brand guide. The logo was even designed with a digital application in mind and how it would interact with application icons, websites and digital identities.</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section id="more-about" class="page-content__section page-content__section--details">
+            <section class="page-content__section page-content__section--details">
                 <div class="page-content__body">
                     <div class="page-content__body__image" data-image-replace>
-                        <img src="/img/portfolio-ux-innovatech.jpg" alt="Innovatech" class="img-fluid">
+                        <img src="/img/portfolio-ui-ryd-guide.jpg" alt="RYD Agro" class="img-fluid">
                     </div>
                     <div class="page-content__body__about">
-                        <h2 class="title">Produto em andamento</h2>
-                        <p>Com as lições aprendidas na primeira interação, optou-se por pivotagem do modelo de negócios e o trabalho foi reiniciado, desde a concepção de uma nova regra de negócios até a restruturação do projeto.</p>
-                        <p>O mais legal é que o aprendizado, as personas e os fluxos de usuário continuaram como base para outras iniciativas da empresa.</p>
+                        <h2 class="title">UI Guide and Brand Guide</h2>
+                        <p>I carried out a briefing survey with the client, brand studies, desires and art direction work with the designer who developed the logo concept. My job was to translate the client's desires so that a coherent and applicable brand could be developed in digital media.</p>
                     </div>
                 </div>
             </section>
             <!-- Só aparece se for imagem full -->
+            <section class="page-content__section page-content__section--details">
+                <div class="page-content__body">
+                    <div class="page-content__body__image w-100 page-content__body__image--bg" data-image-replace>
+                        <img src="/img/portfolio-ui-ryd-branding.jpg" alt="RYD Agro" class="img-fluid">
+                    </div>
+                </div>
+            </section>
         </article>
     </main>
 
