--- a/public/portfolio-ux-innovatech_en.html
+++ b/public/portfolio-ux-innovatech_en.html
@@ -5,26 +5,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="canonical" href="https://poebellentani.me/">
-    <meta itemprop="name" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta itemprop="name" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta itemprop="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta itemprop="image" content="https://poebellentani.me/img/poebellentani.jpg">
     <!-- Metatags gerais -->
     <meta name="description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
-    <title>Poe Bellentani, UX/UI Design &amp; Developer</title>
-    <meta name="keywords" content="UX consultant, UI design, Design, UX consultoria, User Experience, Consultoria, Frontend Developer">
+    <title>Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer</title>
+    <meta name="keywords" content="UX consultant, Design System, Design Ops, UI design, Design, UX consultant, User Experience, Consultoria UX, Consultoria, Frontend Developer">
     <!-- Metatags opcionais -->
-    <meta name="copyright" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta name="copyright" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="revisit-after" content="1 day">
     <meta name="author" content="Poe Bellentani">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@poebellentani">
-    <meta name="twitter:title" content="Poe Bellentani, UX/UI Design &amp; Developer">
+    <meta name="twitter:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta name="twitter:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta name="twitter:image" content="https://poebellentani.me/img/twitter-image.jpg">
     <meta name="twitter:url" content="https://poebellentani.me/">
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="Poe Bellentani: UX/UI Designer &amp; Frontend Developer">
+    <meta property="og:title" content="Poe Bellentani: Design System, Design Ops, Ui Design, UX & Frontend Developer">
     <meta property="og:site_name" content="Poe Bellentani, UX/UI Design &amp; Developer">
     <meta property="og:url" content="https://poebellentani.me/">
     <meta property="og:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
@@ -78,7 +78,7 @@
     <main class="portfolio__body">
         <a id="home" href="javascript.void(0)" class="main-anchor" aria-label="Início do Site"></a>
         <article class="page-content page-content--ux">
-            <section class="page-content__section">
+            <section class="page-content__section page-content__section--first">
                 <div class="page-content__header">
                     <div class="container-fluid">
                         <div class="row">
@@ -86,14 +86,13 @@
                                 <h1 class="title">
                                     Innovatech
                                 </h1>
-                                <div class="description">
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, atque quaerat facere illo quod repellat natus maiores adipisci, dolores possimus velit praesentium voluptatum illum, recusandae accusamus! Similique tempora culpa dolor!</p>
+                                <div class="description">I helped to understand the idea, we designed the proto-personas, applied Design Thinking methodologies and molded the business for the client.</p>
                                 </div>
                                 <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
-                                    <a href="portfolio.html#ux" class="title">
+                                    <a href="portfolio_pt-br.html#ux" class="title">
                                         <!-- se vier a hash com #ux ou #ui define o layout do "back" -->
-                                        <i>Portfolio</i> <b>UX</b>
+                                        <b>UX</b> <i>Portfolio</i>
                                         <span class="go-to-other">UI</span>
                                     </a>
                                 </div>
@@ -108,22 +107,22 @@
                                 <div class="page-content__image">
                                     <img src="/img/icon-brain.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">Problema</h2>
-                                <p>A empresa queria desenvolver um modelo de negócio para captação de leads e comprovação de autoridade em sua área de atuação.</p>
+                                <h2 class="title title--secondary">Problem</h2>
+                                <p>The company wanted to develop a business model for capturing leads and proving authority in its area of expertise.</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
                                     <img src="/img/icon-transform.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">Solução proposta</h2>
-                                <p>A criação de um MVP para validação da ideia e do modelo de negócios - que ainda estava imaturo e precisava de testes para validar sua lucratividade.</p>
+                                <h2 class="title title--secondary">Proposed solution</h2>
+                                <p>The creation of an MVP to validate the idea and the business model - which was still immature and needed testing to validate its profitability.</p>
                             </div>
                             <div class="col-12 offset-md-1 col-md-3 pb-4">
                                 <div class="page-content__image">
                                     <img src="/img/icon-think-big.svg" alt="Problema" class="img-fluid">
                                 </div>
-                                <h2 class="title title--secondary">Resultado</h2>
-                                <p>Indentificou-se o cenário, mas o produto teve que ser revisto. Aprendeu-se muito com testes e validações com o MVP e o produto voltou para a prancheta.</p>
+                                <h2 class="title title--secondary">Result</h2>
+                                <p>The scenario was identified, but the product had to be revised. A lot was learned from tests and validations with the MVP and the product returned to the white board.</p>
                             </div>
                         </div>
                     </div>
@@ -135,9 +134,9 @@
                         <img src="/img/portfolio-ux-innovatech.jpg" alt="Innovatech" class="img-fluid">
                     </div>
                     <div class="page-content__body__about">
-                        <h2 class="title">Produto em andamento</h2>
-                        <p>Com as lições aprendidas na primeira interação, optou-se por pivotagem do modelo de negócios e o trabalho foi reiniciado, desde a concepção de uma nova regra de negócios até a restruturação do projeto.</p>
-                        <p>O mais legal é que o aprendizado, as personas e os fluxos de usuário continuaram como base para outras iniciativas da empresa.</p>
+                        <h2 class="title">Product in progress</h2>
+                        <p>With the lessons learned in the first iteration, it was decided to pivot the business model and work was restarted, from the conception of a new business rule to the restructuring of the project.</p>
+                        <p>The cool thing is that learning, personas and user flows continued as a basis for other company initiatives.</p>
                     </div>
                 </div>
             </section>
