--- a/public/portfolio-ux-innovatech_pt-br.html
+++ b/public/portfolio-ux-innovatech_pt-br.html
@@ -18,7 +18,7 @@
     <meta name="author" content="Poe Bellentani">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@bonsaiux">
+    <meta name="twitter:site" content="@poebellentani">
     <meta name="twitter:title" content="Poe Bellentani, UX/UI Design &amp; Developer">
     <meta name="twitter:description" content="Geek, nerd, always amazed with the Internet possibilities, interface addicted (mobile to games, software to hardware, RL to Matrix) and a believer who wants learn more and more things through books and root websites (like W3C, O&#x27;Reilly books, Codeschool, Lynda.com and a lot of online sources)">
     <meta name="twitter:image" content="https://poebellentani.me/img/twitter-image.jpg">
