--- a/public/portfolio_en.html
+++ b/public/portfolio_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -102,7 +102,7 @@
             <div class="page-content__list">
                 <ul class="list-unstyled">
                     <li>
-                        <a href="portfolio-ux-innovatech_pt-br.html">
+                        <a href="portfolio-ux-innovatech_en.html">
                             <span>
                                 <strong>UX #1:</strong> Innovatech
                             </span>
@@ -122,14 +122,14 @@
             <div class="page-content__list">
                 <ul class="list-unstyled">
                     <li>
-                        <a href="portfolio-ui-apollion_pt-br.html">
+                        <a href="portfolio-ui-apollion_en.html">
                             <span>
                             <strong>UI #1:</strong> Apollion DS & Ops (2020 ~ 2022)
                             </span>
                         </a>
                     </li>
                     <li>
-                        <a href="portfolio-ui-ryd_pt-br.html">
+                        <a href="portfolio-ui-ryd_en.html">
                             <span>
                                 <strong>UI #2:</strong> RYD Agro (2018)
                             </span>
