links erros on backlink

--- a/public/portfolio-ui-ryd_en.html
+++ b/public/portfolio-ui-ryd_en.html
@@ -91,9 +91,9 @@
                                 </div>
                                 <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
-                                    <a href="portfolio_pt-br.html#ui" class="title">
+                                    <a href="portfolio_en.html#ui" class="title">
                                         <!-- se vier a hash com #ux ou #ui define o layout do "back" -->
-                                        <b>UI</b> <i>Portfolio</i>
+                                        <i>Portfolio</i> <b>UI</b>
                                         <span class="go-to-other">UX</span>
                                     </a>
                                 </div>
