--- a/public/portfolio-ux-innovatech_en.html
+++ b/public/portfolio-ux-innovatech_en.html
@@ -90,9 +90,9 @@
                                 </div>
                                 <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
-                                    <a href="portfolio_pt-br.html#ux" class="title">
+                                    <a href="portfolio_en.html#ux" class="title">
                                         <!-- se vier a hash com #ux ou #ui define o layout do "back" -->
-                                        <b>UX</b> <i>Portfolio</i>
+                                        <i>Portfolio</i> <b>UX</b>
                                         <span class="go-to-other">UI</span>
                                     </a>
                                 </div>
