--- a/public/portfolio-ui-apollion_en.html
+++ b/public/portfolio-ui-apollion_en.html
@@ -92,8 +92,8 @@
                                 </div>
                                 <a href="#more-about" class="btn btn-outline-primary btn-lg">Ver mais <i class="fas fa-arrow-right"></i></a>
                                 <div class="go-home box-caller">
-                                    <a href="portfolio_pt-br.html#ui" class="title"><!-- se vier a hash com #ux ou #ui define o layout do "back" -->
-                                    <b>UI</b> <i>Portfolio</i>
+                                    <a href="portfolio_en.html#ui" class="title"><!-- se vier a hash com #ux ou #ui define o layout do "back" -->
+                                    <i>Portfolio</i> <b>UI</b>
                                     <span class="go-to-other">UX</span>
                                     </a>
                                 </div>
